--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@fluentui/react": "^7.160.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "core-js": "^3.1.4",
     "es6-promise": "^4.2.8",
     "office-ui-fabric-react": "^7.10.0",
